# bio-dict

./: .gitignore  pyproject.toml
api/: api.py
api/services/: germination_service.py  seed_service.py
classes/: __init__.py  api.py  enums.py  germination.py  seed.py
tests/: test__germination.py  test_seed_class.py
